cargo-features = ["edition2024"]

[package]
name = "prod_craft"
version = "0.2.0"
authors = ["Elijah Samson <elijahobara357@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "prod_craft"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "macros","chrono","migrate","uuid","tls-rustls", "postgres"] }
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.9"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.16"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
serde_urlencoded = "0.7.1"
tabwriter = "1.1.0"
dirs = "1.0.4"
